--- a/src/views/sedeMéxico.html
+++ b/src/views/sedeMéxico.html
@@ -65,45 +65,45 @@
           <section class="dashboard-counts no-padding-bottom">
             <div class="container-fluid">
               <div class="row bg-white has-shadow">
-                <button class="no-button-sedes" id="btn-generation1">
-                  <div class="col-xl-4 col-sm-12 col-md-4 campus-name" id="México">
-                    <div class="item d-flex align-items-center">
-                      <div class="title text-center"><p class="generation-number" id="generation1"></p>
-                        <div class="progress">
-                          <div role="progressbar" style="width: 85%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-blue"></div>
+                <div class="col-xl-4 col-sm-12 col-md-4 campus-name" id="México">
+                  <button class="no-button-sedes" id="btn-generation1">
+                      <div class="item d-flex align-items-center">
+                        <div class="title text-center"><p class="generation-number" id="generation1"></p>
+                          <div class="progress">
+                            <div role="progressbar" style="width: 85%; height: 4px;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-blue"></div>
+                          </div>
                         </div>
+                        <div class="number"><strong id="students-generation1"></strong></div>
+                        <div class="icon bg-blue margin-left"><i class="icon-user"></i></div>
                       </div>
-                      <div class="number"><strong id="students-generation1"></strong></div>
-                      <div class="icon bg-blue margin-left"><i class="icon-user"></i></div>
-                    </div>
-                  </div>
-                </button>
-                <button class="no-button-sedes" id="btn-generation2">
-                  <div class="col-xl-4 col-sm-12 col-md-4 campus-name" id="México">
-                    <div class="item d-flex align-items-center">
-                      <div class="title text-center"><p class="generation-number" id="generation2"></p>
-                        <div class="progress">
-                          <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-pinkLab"></div>
+                  </button>
+                </div>
+                <div class="col-xl-4 col-sm-12 col-md-4 campus-name" id="México">
+                  <button class="no-button-sedes" id="btn-generation2">
+                      <div class="item d-flex align-items-center">
+                        <div class="title text-center"><p class="generation-number" id="generation2"></p>
+                          <div class="progress">
+                            <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-pinkLab"></div>
+                          </div>
                         </div>
+                        <div class="number"><strong id="students-generation2"></strong></div>
+                        <div class="icon bg-pinkLab margin-left"><i class="icon-user"></i></div>
                       </div>
-                      <div class="number"><strong id="students-generation2"></strong></div>
-                      <div class="icon bg-pinkLab margin-left"><i class="icon-user"></i></div>
-                    </div>
-                  </div>
-                </button>
-                <button class="no-button-sedes" id="btn-generation3">
-                  <div class="col-xl-4 col-sm-12 col-md-4 campus-name" id="México">
-                    <div class="item d-flex align-items-center">
-                      <div class="title text-center"><p class="generation-number" id="generation3"></p>
-                        <div class="progress">
-                          <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-greenLab"></div>
+                  </button>
+                </div>
+                <div class="col-xl-4 col-sm-12 col-md-4 campus-name" id="México">
+                  <button class="no-button-sedes" id="btn-generation3">
+                      <div class="item d-flex align-items-center">
+                        <div class="title text-center"><p class="generation-number" id="generation3"></p>
+                          <div class="progress">
+                            <div role="progressbar" style="width: 90%; height: 4px;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" class="progress-bar bg-greenLab"></div>
+                          </div>
                         </div>
+                        <div class="number"><strong id="students-generation3"></strong></div>
+                        <div class="icon bg-greenLab margin-left"><i class="icon-user"></i></div>
                       </div>
-                      <div class="number"><strong id="students-generation3"></strong></div>
-                      <div class="icon bg-greenLab margin-left"><i class="icon-user"></i></div>
-                    </div>
-                  </div>
-                </button>
+                  </button>
+                </div>
               </div>
             </div>
           </section>
@@ -120,7 +120,17 @@
                 <div class="col-lg-12">
                   <div class="card">
                     <div class="card-header d-flex align-items-center">
-                      <h3 class="h4" id="table-title">Estudiantes</h3>
+                      <div class="col-md-6">
+                        <h3 class="h4" id='table-title'>Estudiantes</h3>
+                      </div>
+                      <div class="col-md-6 text-right">
+                        <div class="btn-group" role="group" aria-label="...">
+                          <button class="btn btn-primary" id="name-asc">a-z</button>
+                          <button class="btn btn-primary" id="name-desc">z-a</button>
+                          <button class="btn btn-primary" id="percentaje-desc">% +</button>
+                          <button class="btn btn-primary" id="percentaje-asc">% -</button>
+                        </div>
+                      </div>
                     </div>
                     <div class="card-body">
                       <div class="table-responsive">   
